--- a/test.html
+++ b/test.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html>
-<style>
+<html lang="en">
+
+<head>
+  <style>
   h1
   {
     color: goldenrod;
     font-size: 38pt;
     font-family: georgia;
   }
-</style>
-<head>
+  </style>
   <title>Hope these work</title>
 </head>
 <h1>Website Testing</h1>
