--- a/profile.html
+++ b/profile.html
@@ -26,7 +26,7 @@
 
 <body>
   <h1>Miranda Hoyman</h1>
-  <img src="https://cdn3.whatculture.com/images/2019/08/4d679bd476854895-600x338.jpg" alt="I had to use Dwight Schrute since I coudn't figure out the actual picture">
+  <img id="mainpic" src="sanchez-steven.png" alt="I had to use Dwight Schrute since I coudn't figure out the actual picture">
   <p>Here's a list of some of my favorite things</p>
   <ul>
     <li>Pasta (any kind, any sauce)</li>
