--- a/inspire.html
+++ b/inspire.html
@@ -27,7 +27,7 @@
 
 <body>
   <h1>Jim Henson</h1>
-  <img src="https://static.tvtropes.org/pmwiki/pub/images/jim_henson_and_muppets.jpeg" alt="Jim Henson and the Muppets">
+  <img id="Jimmy" src="jim_henson_and_muppets.webp" alt="Jim Henson and the Muppets">
   <h2>James Henson was the main creative mind behind the Muppet Show, Sesame Street, Labyrinth, The Dark Crystal, and many other integral children's shows throughout the decades.</h2>
   <p>While he may not be the most influential or revolutionary man, he brought joy and learning to children worldwide and certainly made the world a better place through his creative genius.</p>
   <p><a href="https://www.henson.com/">Learn more</a></p>
