--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 <body>
   <h1>Hey bestie!</h1>
   <p>This is my web design website</p>
-  <img src="https://uncbears.com/images/responsive_2018/unco_logo_bear.svg" alt="UNC logo">
+  <img id="UNC logo" src="unco_logo_bear.svg" alt="UNC logo">
   <h2>Cheesecake</h2>
   <p><strong>omg</strong> I'm so hungry</p>
-  <img src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2013/12/9/0/FNK_Cheesecake_s4x3.jpg.rend.hgtvcom.406.305.suffix/1387411272847.jpeg" alt="Cheesecake because I'm so hungry">
+  <img id="Cheesecake" src="1387411272847.jpg" alt="Cheesecake because I'm so hungry">
   <h2> Link to recipe </h2>
   <h3> <a href="https://www.foodnetwork.com/recipes/food-network-kitchen/cheesecake-recipe2-2011459"> Cheesecake recipe</a> </h3><h1>Links to past projects</h1>
     <ul>
