--- a/inspire.html
+++ b/inspire.html
@@ -32,5 +32,6 @@
   <p>While he may not be the most influential or revolutionary man, he brought joy and learning to children worldwide and certainly made the world a better place through his creative genius.</p>
   <p><a href="https://www.henson.com/">Learn more</a></p>
   <p>Jim Henson is one of my heroes because of his dedication and positivity. His work brings so much nostalgia and happiness to everyone, and his legacy continues to this day.</p>
+  <h3> <a href="https://mirandarightsss.github.io/index.html"> Home</a> </h3>
 </body>
 </html>
