--- a/template.html
+++ b/template.html
@@ -26,7 +26,8 @@
 <body>
   <p>text goes here</p>
 
-<h1>Page Title</h1>
+  <h1>Page Title</h1>
+  <h3> <a href="https://mirandarightsss.github.io/index.html"> Home</a> </h3>
 </body>
   
 </html>
