--- a/test.html
+++ b/test.html
@@ -12,48 +12,51 @@
   </style>
   <title>Hope these work</title>
 </head>
-<h1>Website Testing</h1>
- <table>
-   <thead style="background-color: goldenrod">
+<body>
+  <h1>Website Testing</h1>
+   <table>
+     <thead style="background-color: goldenrod">
+       <tr>
+         <th style="border: 1px solid black">Page Name</th>
+         <th style="border: 1px solid black">URL</th>
+         <th style="border: 1px solid black">Validation</th>
+       </tr>
+     </thead>
      <tr>
-       <th style="border: 1px solid black">Page Name</th>
-       <th style="border: 1px solid black">URL</th>
-       <th style="border: 1px solid black">Validation</th>
+       <th style="border: 1px solid black">Amuse</th>
+       <th style="border: 1px solid black"><a href="https://mirandarightsss.github.io/amuse.html">amuse.html</a></th>
+       <th style="border: 1px solid black"><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fmirandarightsss.github.io%2Famuse.html">VALIDATE</a></th>
      </tr>
-   </thead>
-   <tr>
-     <th style="border: 1px solid black">Amuse</th>
-     <th style="border: 1px solid black"><a href="https://mirandarightsss.github.io/amuse.html">amuse.html</a></th>
-     <th style="border: 1px solid black"><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fmirandarightsss.github.io%2Famuse.html">VALIDATE</a></th>
-   </tr>
-   <tr>
-     <th style="border: 1px solid black">Template</th>
-     <th style="border: 1px solid black"><a href="https://mirandarightsss.github.io/template.html">template.html</a></th>
-     <th style="border: 1px solid black"><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fmirandarightsss.github.io%2Ftemplate.html">VALIDATE</a></th>
-   </tr>
-   <tr>
-     <th style="border: 1px solid black">Educate</th>
-     <th style="border: 1px solid black"><a href="https://mirandarightsss.github.io/educate.html">educate.html</a></th>
-     <th style="border: 1px solid black"><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fmirandarightsss.github.io%2Feducate.html">VALIDATE</a></th>
-   </tr>
-   <tr>
-     <th style="border: 1px solid black">Index</th>
-     <th style="border: 1px solid black"><a href="https://mirandarightsss.github.io/index.html">index.html</a></th>
-     <th style="border: 1px solid black"><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fmirandarightsss.github.io%2Findex.html">VALIDATE</a></th>
-   </tr>
-   <tr>
-     <th style="border: 1px solid black">Inspire</th>
-     <th style="border: 1px solid black"><a href="https://mirandarightsss.github.io/inspire.html">inspire.html</a></th>
-     <th style="border: 1px solid black"><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fmirandarightsss.github.io%2Finspire.html">VALIDATE</a></th>
-   </tr>
-   <tr>
-     <th style="border: 1px solid black">Profile</th>
-     <th style="border: 1px solid black"><a href="https://mirandarightsss.github.io/profile.html">profile.html</a></th>
-     <th style="border: 1px solid black"><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fmirandarightsss.github.io%2Fprofile.html">VALIDATE</a></th>
-   </tr>
-   <tr>
-     <th style="border: 1px solid black">Images</th>
-     <th style="border: 1px solid black"><a href="https://mirandarightsss.github.io/images">images</a></th>
-     <th style="border: 1px solid black"><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fmirandarightsss.github.io%2Fimages">VALIDATE</a></th>
-   </tr>
- </table>
+     <tr>
+       <th style="border: 1px solid black">Template</th>
+       <th style="border: 1px solid black"><a href="https://mirandarightsss.github.io/template.html">template.html</a></th>
+       <th style="border: 1px solid black"><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fmirandarightsss.github.io%2Ftemplate.html">VALIDATE</a></th>
+     </tr>
+     <tr>
+       <th style="border: 1px solid black">Educate</th>
+       <th style="border: 1px solid black"><a href="https://mirandarightsss.github.io/educate.html">educate.html</a></th>
+       <th style="border: 1px solid black"><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fmirandarightsss.github.io%2Feducate.html">VALIDATE</a></th>
+     </tr>
+     <tr>
+       <th style="border: 1px solid black">Index</th>
+       <th style="border: 1px solid black"><a href="https://mirandarightsss.github.io/index.html">index.html</a></th>
+       <th style="border: 1px solid black"><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fmirandarightsss.github.io%2Findex.html">VALIDATE</a></th>
+     </tr>
+     <tr>
+       <th style="border: 1px solid black">Inspire</th>
+       <th style="border: 1px solid black"><a href="https://mirandarightsss.github.io/inspire.html">inspire.html</a></th>
+       <th style="border: 1px solid black"><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fmirandarightsss.github.io%2Finspire.html">VALIDATE</a></th>
+     </tr>
+     <tr>
+       <th style="border: 1px solid black">Profile</th>
+       <th style="border: 1px solid black"><a href="https://mirandarightsss.github.io/profile.html">profile.html</a></th>
+       <th style="border: 1px solid black"><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fmirandarightsss.github.io%2Fprofile.html">VALIDATE</a></th>
+     </tr>
+     <tr>
+       <th style="border: 1px solid black">Images</th>
+       <th style="border: 1px solid black"><a href="https://mirandarightsss.github.io/images">images</a></th>
+       <th style="border: 1px solid black"><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fmirandarightsss.github.io%2Fimages">VALIDATE</a></th>
+     </tr>
+   </table>
+   <h3> <a href="https://mirandarightsss.github.io/index.html"> Home</a> </h3>
+</body>
