--- a/test.html
+++ b/test.html
@@ -57,6 +57,11 @@
        <th style="border: 1px solid black"><a href="https://mirandarightsss.github.io/images">images</a></th>
        <th style="border: 1px solid black"><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fmirandarightsss.github.io%2Fimages">VALIDATE</a></th>
      </tr>
+     <tr>
+       <th style="border: 1px solid black">Superheroes</th>
+       <th style="border: 1px solid black"><a href="https://mirandarightsss.github.io/superhero.html">superhero.html</a></th>
+       <th style="border: 1px solid black"><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fmirandarightsss.github.io%2Fsuperhero.html">VALIDATE</a></th>
+     </tr>
    </table>
    <h3> <a href="https://mirandarightsss.github.io/index.html"> Home</a> </h3>
 </body>
