--- a/superhero.html
+++ b/superhero.html
@@ -3,17 +3,28 @@
   
 <head>
   <style>
-  h1
-  {
-    color: lightblue;
-    font-size: 38pt;
-    font-family: georgia;
-  }
-  .heropic
-  {
-    
-</style>
+    h1
+    {
+      color: lightblue;
+      font-size: 38pt;
+      font-family: georgia;
+    }
+    .heropic
+    {
+      height: 100px;
+    }
+    table
+    {
+      border-spacing: 0px;
+    }
+    td, th
+    {
+      padding: 0px;
+    }    
+  </style>
+  
   <title>Superheroes</title>
+  
 </head>  
 <body>
 
@@ -34,7 +45,8 @@
        <th style="border: 2px solid red">
          <th class="hero">
            <a href="https://media.gq-magazine.co.uk/photos/63468efef4f48bee2acb7062/3:2/w_1620,h_1080,c_limit/Tom-Holland-Spiderman-what-we-know-so-far.jpg" height="100px" alt="Tom Holland">
-           <img src="https://media.gq-magazine.co.uk/photos/63468efef4f48bee2acb7062/3:2/w_1620,h_1080,c_limit/Tom-Holland-Spiderman-what-we-know-so-far.jpg" height="100px" alt="Tom Holland"></th>
+           <img src="https://media.gq-magazine.co.uk/photos/63468efef4f48bee2acb7062/3:2/w_1620,h_1080,c_limit/Tom-Holland-Spiderman-what-we-know-so-far.jpg" height="100px" alt="Tom Holland">
+         </th>
        <th style="border: 2px solid blue">Shoots webs, enhanced senses and strength, pop culture references</th>
        <th style="border: 2px solid red">Bullets and Ethyl Chloride Pesticide</th>
      </tr>
@@ -82,7 +94,7 @@
      <tr>
        <th style="border: 2px solid red">Lightning McQueen</th>
        <th style="border: 2px solid rgb(252, 95, 28)">Lightning McQueen</th>
-       <th style="border: 2px solid rgb(252, 95, 28)"><a href="https://lumiere-a.akamaihd.net/v1/images/open-uri20150422-20810-1fndzcd_41017374.jpeg?region=0,0,600,600" height="100px" alt="Ka-Chow"></th>
+       <th style="border: 2px solid rgb(252, 95, 28)"><th class="heropic"><a href="https://lumiere-a.akamaihd.net/v1/images/open-uri20150422-20810-1fndzcd_41017374.jpeg?region=0,0,600,600" height="100px" alt="Ka-Chow"><img src="https://lumiere-a.akamaihd.net/v1/images/open-uri20150422-20810-1fndzcd_41017374.jpeg?region=0,0,600,600" height="100px" alt="Ka-Chow"></th>
        <th style="border: 2px solid rgb(252, 95, 28)">Super speed</th>
        <th style="border: 2px solid red">Empty gas tank and cacti</th>
      </tr>
