--- a/superhero.html
+++ b/superhero.html
@@ -3,24 +3,18 @@
   
 <head>
   <style>
-    h1
-    {
-      color: lightblue;
-      font-size: 38pt;
-      font-family: georgia;
-    }
-    .heropic
-    {
-      height: 100px;
-    }
-    table
-    {
-      border-spacing: 0px;
-    }
-    td, th
-    {
-      padding: 0px;
-    }    
+  .heropic {
+  background-color: rgb(227,218,204);
+  color: rgb(75,45,5);
+  }
+  table {
+  width: 80%;
+  border-collapse: collapse;
+  text-align: center;
+  }
+  th {
+  border: 1px solid black;
+  }
   </style>
   
   <title>Superheroes</title>
@@ -108,4 +102,3 @@
   <h3> <a href="https://mirandarightsss.github.io/index.html">Home</a> </h3>
 </body>
   
-</html>
