--- a/index.html
+++ b/index.html
@@ -3,21 +3,7 @@
 
 <head>
   <title>Welcome to Home Base!</title>
-  <style>
-
-  h1
-  {
-    color:lightpink;
-    font-size: 38pt;
-    font-family:arial;
-  }
-  h2
-  {
-    color:lightblue;
-    font-size: 24pt;
-    font-family:georgia;
-  }
-</style>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
