--- a/amuse.html
+++ b/amuse.html
@@ -3,21 +3,7 @@
   
 <head>
   <title>The internet is hilarious</title>
-
-  <style>
-    h1
-    {
-      color: lightblue;
-      font-size: 38pt;
-      font-family: georgia;
-    }
-    h2
-    {
-      color: lightpink;
-      font-size: 14pt;
-      font-family: georgia;
-    }
-  </style>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
