--- a/educate.html
+++ b/educate.html
@@ -3,25 +3,7 @@
 
 <head>
   <title>Education time</title>
-  <style>
-   h1
-  {
-    color: lightblue;
-    font-size: 38pt;
-    font-family: georgia;
-  }
-  h2
-  {
-    color: lightpink;
-    font-size: 14pt;
-    font-family: georgia;
-  }
-  p
-  {
-    font-family: georgia;
-    color: lavender;
-  }
-  </style>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 
