--- a/profile.html
+++ b/profile.html
@@ -2,25 +2,7 @@
 <html lang="en">
 
 <head>
-  <style>
-  h1
-  {
-    color: lavender;
-    font-size: 38pt;
-    font-family: georgia;
-  }
-  h2
-  {
-    color: lightpink;
-    font-size: 14pt;
-    font-family: georgia;
-  }
-  p
-  {
-    font-family: georgia;
-    color: lightblue;
-  }
-  </style>
+  <link rel="stylesheet" href="css/main.css">
   <title>This is me</title>
 </head>
 
