--- a/template.html
+++ b/template.html
@@ -2,25 +2,7 @@
 <html lang="en">
   
 <head>
-  <style>
-  h1
-  {
-    color: limegreen;
-    font-size: 38pt;
-    font-family: georgia;
-  }
-  h2
-  {
-    color: lightpink;
-    font-size: 14pt;
-    font-family: georgia;
-  }
-  p
-  {
-    font-family: georgia;
-    color: rgb(130, 226, 255);
-  }
-</style>
+  <link rel="stylesheet" href="css/main.css">
   <title>Template</title>
 </head>  
 <body>
