--- a/superhero.html
+++ b/superhero.html
@@ -72,7 +72,7 @@
        <td style="border: 2px solid rgb(148, 0, 0)">
          <td class="heropic">
           <a href="https://4kwallpapers.com/images/wallpapers/wanda-maximoff-elizabeth-olsen-scarlet-witch-marvel-comics-1242x2688-8520.jpg"></a>
-            <img src="https://4kwallpapers.com/images/wallpapers/wanda-maximoff-elizabeth-olsen-scarlet-witch-marvel-comics-1242x2688-8520.jpg" style="height: 100px" alt="Elizabeth Olsen"></a>
+            <img src="https://4kwallpapers.com/images/wallpapers/wanda-maximoff-elizabeth-olsen-scarlet-witch-marvel-comics-1242x2688-8520.jpg" style="height: 100px" alt="Elizabeth Olsen">
        </td>
        <td style="border: 2px solid rgb(148, 0, 0)">Magic, telekinesis, mind reading, alternate reality creation, etc.</td>
        <td style="border: 2px solid rgb(148, 0, 0)">Loss of loved ones, attacks, bullets</td>
