--- a/css/search.html
+++ b/css/search.html
@@ -13,7 +13,7 @@
                 <br>
                 
                 <input type="checkbox" name="newwindow" value="1" id="checkwindow">
-                <label for="checkbox">Open links in a new window</label>
+                <label id="checkbox">Open links in a new window</label>
                 <br>
                 
                 <label for="site">Website: </label>
@@ -35,5 +35,5 @@
             </div>
         </form>
     </body>
-    <p><a href="index.html">Home</a></p>
+    <a href="index.html">Home</a>
 </html>
