--- a/superhero.html
+++ b/superhero.html
@@ -86,9 +86,9 @@
      <tr>
        <th style="border: 2px solid red">Lightning McQueen</th>
        <td style="border: 2px solid rgb(252, 95, 28)">Lightning McQueen</td>
-       <td style="border: 2px solid rgb(252, 95, 28)"><td class="heropic">
-        <a href="https://lumiere-a.akamaihd.net/v1/images/open-uri20150422-20810-1fndzcd_41017374.jpeg?region=0,0,600,600"></a>
-          <img src="https://lumiere-a.akamaihd.net/v1/images/open-uri20150422-20810-1fndzcd_41017374.jpeg?region=0,0,600,600" style="height: 100px" alt="Ka-Chow">
+       <td style="border: 2px solid rgb(252, 95, 28)" class="heropic">
+         <a href="https://lumiere-a.akamaihd.net/v1/images/open-uri20150422-20810-1fndzcd_41017374.jpeg?region=0,0,600,600" target="_blank">
+          <img src="https://lumiere-a.akamaihd.net/v1/images/open-uri20150422-20810-1fndzcd_41017374.jpeg?region=0,0,600,600" alt="Lightning McQueen" style="height: 100px;">
        </td>
        <td style="border: 2px solid rgb(252, 95, 28)">Super speed</td>
        <td style="border: 2px solid red">Empty gas tank and cacti</td>
