--- a/superhero.html
+++ b/superhero.html
@@ -57,8 +57,8 @@
        <th style="border: 2px solid blue">Steve Rogers</th>
        <td style="border: 2px solid red">Captain America (Chris Evans)</td>
        <td style="border: 2px solid grey" class="heropic">
-          <a href="https://m.economictimes.com/thumb/msid-69139984,width-1200,height-900,resizemode-4,imgsize-220108/captainamerica.jpg"></a>
-           <img src="https://m.economictimes.com/thumb/msid-69139984,width-1200,height-900,resizemode-4,imgsize-220108/captainamerica.jpg" style="height: 100px" alt="Chris Evans">
+         <a href="https://m.economictimes.com/thumb/msid-69139984,width-1200,height-900,resizemode-4,imgsize-220108/captainamerica.jpg" target="_blank">
+          <img src="https://m.economictimes.com/thumb/msid-69139984,width-1200,height-900,resizemode-4,imgsize-220108/captainamerica.jpg" alt="Chris Evans" style="height: 100px;>
        </td>
        <td style="border: 2px solid red">Enhanced speed, strength, and his shield</td>
        <td style="border: 2px solid grey">Time and the Internet</td>
@@ -67,8 +67,8 @@
        <th style="border: 2px solid rgb(148, 0, 0)">Wanda Maximoff</th>
        <td style="border: 2px solid rgb(148, 0, 0)">Scarlet Witch</td>
        <td style="border: 2px solid rgb(148, 0, 0)" class="heropic">
-         <a href="https://4kwallpapers.com/images/wallpapers/wanda-maximoff-elizabeth-olsen-scarlet-witch-marvel-comics-1242x2688-8520.jpg"></a>
-           <img src="https://4kwallpapers.com/images/wallpapers/wanda-maximoff-elizabeth-olsen-scarlet-witch-marvel-comics-1242x2688-8520.jpg" style="height: 100px" alt="Elizabeth Olsen">
+         <a href="https://4kwallpapers.com/images/wallpapers/wanda-maximoff-elizabeth-olsen-scarlet-witch-marvel-comics-1242x2688-8520.jpg" target="_blank">
+          <img src="https://4kwallpapers.com/images/wallpapers/wanda-maximoff-elizabeth-olsen-scarlet-witch-marvel-comics-1242x2688-8520.jpg" alt="Elizabeth Olsen" style="height: 100px;">
        </td>
        <td style="border: 2px solid rgb(148, 0, 0)">Magic, telekinesis, mind reading, alternate reality creation, etc.</td>
        <td style="border: 2px solid rgb(148, 0, 0)">Loss of loved ones, attacks, bullets</td>
@@ -77,8 +77,8 @@
        <th style="border: 2px solid grey">Thor Odinson</th>
        <td style="border: 2px solid yellow">Thor</td>
        <td style="border: 2px solid red" class="heropic">
-          <a href="https://upload.wikimedia.org/wikipedia/en/thumb/3/3c/Chris_Hemsworth_as_Thor.jpg/220px-Chris_Hemsworth_as_Thor.jpg"></a>
-           <img src="https://upload.wikimedia.org/wikipedia/en/thumb/3/3c/Chris_Hemsworth_as_Thor.jpg/220px-Chris_Hemsworth_as_Thor.jpg" style="height: 100px" alt="Chris Hemsworth">
+         <a href="https://upload.wikimedia.org/wikipedia/en/thumb/3/3c/Chris_Hemsworth_as_Thor.jpg/220px-Chris_Hemsworth_as_Thor.jpg" target="_blank">
+          <img src="https://upload.wikimedia.org/wikipedia/en/thumb/3/3c/Chris_Hemsworth_as_Thor.jpg/220px-Chris_Hemsworth_as_Thor.jpg" alt="Thor" style="height: 100px;">
        </td>
        <td style="border: 2px solid yellow">Is literally the God of Thunder, magic hammer</td>
        <td style="border: 2px solid grey">Perserverance, determination, sedentary lifestyle</td>
