--- a/search.html
+++ b/search.html
@@ -2,8 +2,13 @@
 <html lang="en">
     <head>
         <style>
-        .search {
-          color: rgb(255, 133, 222);
+        p {
+        color: black;
+        }
+        .submit {
+        margin: 10px 0px;
+        background-color: rgb(255, 184, 234);
+        color: white;
         }
         </style>
         <link href="css/main.css" rel="stylesheet">
@@ -22,7 +27,7 @@
                 <label id="checkbox">Open links in a new window</label>
                 <br>
                 
-                <label for="site">Website: </label>
+                <label for="site">Website URL: </label>
                 <input type="text" id="site" name="as_sitesearch" placeholder="Enter your chosen website here" size="75">
                 <br>
                 <input type="submit" value="Go!">
@@ -31,7 +36,7 @@
                 <p>Pre-picked favorite websites 
                     <select name="faves">
                         <option value="https://www.youtube.com/">Youtube</option>
-                        <option value="https://quickdraw.withgoogle.com/#">Quick Draw</option>
+                        <option value="https://quickdraw.withgoogle.com/">Quick, Draw</option>
                         <option value="https://www.unco.edu/canvas/">Canvas (not my fave, just useful)</option>
                         <option value="https://open.spotify.com/">Spotify</option>
                         <option value="https://wizardmore.com/sorting-hat-x/">Sorting Hat</option>
