--- a/search.html
+++ b/search.html
@@ -34,7 +34,7 @@
                 <br>
 
                 <p>Pre-picked favorite websites 
-                    <select name="faves">
+                    <select name="as_sitesearch" id="favorites" class="pages">
                         <option value="https://www.youtube.com/">Youtube</option>
                         <option value="https://quickdraw.withgoogle.com/">Quick, Draw</option>
                         <option value="https://www.unco.edu/canvas/">Canvas (not my fave, just useful)</option>
