--- a/search.html
+++ b/search.html
@@ -27,6 +27,7 @@
     <h1>Google, but cooler!</h1>
     <form action="https://www.google.com/search" method="GET" target="_blank">
     <fieldset style="width: 300px;">
+        <p>Only use one of the search functions in the box, please!</p>
     <label for="search">Ask your question here:</label>
     <input type="text" name="q" id="search" placeholder="Question">
     <p>
