--- a/resume/index.html
+++ b/resume/index.html
@@ -35,7 +35,7 @@
       </ol>
     </p>
   </section>
-  <p>Skills</p>
+<h2>Skills</h2>
   <p>
     <ul>
       <li>Basic Photoshop and Illustrator (Graphic design and photo editing)</li>
