--- a/resume/index.html
+++ b/resume/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   
 <head>
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="resume/css/style.css">
   <title>Resume</title>
 </head>  
 <body>
