--- a/resume/index.html
+++ b/resume/index.html
@@ -6,8 +6,18 @@
   <title>Resume</title>
 </head>  
 <body>
-  <h1>Miranda Hoyman</h1>
-<section>
+  <nav>
+    <h1>Miranda Hoyman</h1>
+    <img src="images2/Tom-Holland-Spiderman-what-we-know-so-far.webp" style="height: 100px" alt="I'm Spiderman">
+    <ul>
+      <li><a href=index.html#contactinfo>Contact Info</a></li>
+      <li><a href=index.html#education>Education</a></li>
+      <li><a href=index.html#experience>Experience</a></li>
+      <li><a href=index.html#skills>Skills</a></li>
+    </ul>
+  </nav>
+
+<section id="contactinfo">
   <h2>Contact Information</h2>
   <p>
     <ul>
@@ -16,7 +26,7 @@
       <li>LinkedIn: <a href="https://www.linkedin.com/in/miranda-hoyman-767352225">Click Here</a></li>
     </ul>
   </section>
-  <section>
+  <section id="education">
     <h2>Education</h2>
     <p>
       <ol>
@@ -25,7 +35,7 @@
       </ol>
     </p>
   </section>
-  <section>
+  <section id="experience">
     <h2>Experience</h2>
     <p>
       <ol>
@@ -35,16 +45,17 @@
       </ol>
     </p>
   </section>
-<h2>Skills</h2>
-  <p>
-    <ul>
-      <li>Basic Photoshop and Illustrator (Graphic design and photo editing)</li>
-      <li>Basic Excel (Formulas, graphs, data entry)</li>
-      <li>Flute-Playing (Just classical, NO JAZZ)</li>
-      <li>Basic Photography (I know how to take a picture on a pretty fancy camera)</li>
-      
-    </ul>
-  </p>
+  <section id="skills">
+  <h2>Skills</h2>
+    <p>
+      <ul>
+        <li>Basic Photoshop and Illustrator (Graphic design and photo editing)</li>
+        <li>Basic Excel (Formulas, graphs, data entry)</li>
+        <li>Flute-Playing (Just classical, NO JAZZ)</li>
+        <li>Basic Photography (I know how to take a picture on a pretty fancy camera)</li>
+      </ul>
+    </p>
+  </section>
   <h3> <a href="https://mirandarightsss.github.io/index.html"> Home</a> </h3>
 </body>
   
