--- a/resume/index.html
+++ b/resume/index.html
@@ -3,12 +3,14 @@
   
 <head>
   <link rel="stylesheet" href="resume/css/style.css">
+  <meta charseet"UTF-8">
+  <meta name="viewport" content="width"
   <title>Resume</title>
 </head>  
 <body>
   <nav>
     <h1>Miranda Hoyman</h1>
-    <img src="images2/Tom-Holland-Spiderman-what-we-know-so-far.webp" style="height: 100px" alt="I'm Spiderman">
+    <img src="https://static.wikia.nocookie.net/worldofcarsdrivein/images/7/70/CotR_McQueen.png/revision/latest?cb=20220628092148" style="height: 100px" alt="Ka-Chow">
     <ul>
       <li><a href=index.html#contactinfo>Contact Info</a></li>
       <li><a href=index.html#education>Education</a></li>
@@ -23,7 +25,7 @@
     <ul>
       <li>Phone: 970-381-4432</li>
       <li>Email: miranda.hoyman465@gmail.com</li>
-      <li>LinkedIn: <a href="https://www.linkedin.com/in/miranda-hoyman-767352225">Click Here</a></li>
+      <li>LinkedIn: <a href="https://www.linkedin.com/in/miranda-hoyman-767352225" target="_blank">Click Here</a></li>
     </ul>
   </section>
   <section id="education">
